@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,7 +30,7 @@ public class MroProcessor extends PerlPragmaProcessorBase implements PerlMroProv
   public @NotNull PerlMroType getMroType(PerlUseStatementElement useStatement) {
     List<String> parameters = useStatement.getImportParameters();
 
-    if (parameters != null && !parameters.isEmpty() && "c3".equals(parameters.get(0))) {
+    if (parameters != null && !parameters.isEmpty() && "c3".equals(parameters.getFirst())) {
       return PerlMroType.C3;
     }
     return PerlMroType.DFS;
