@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -48,7 +48,7 @@ public class PerlSmartGetterValue extends PerlOperationValue {
     if (argumentElements.isEmpty()) {
       return UNKNOWN_VALUE;
     }
-    return argumentElements.size() == 1 ? resolvedRealValue : argumentElements.get(0);
+    return argumentElements.size() == 1 ? resolvedRealValue : argumentElements.getFirst();
   }
 
   @Override
