@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -192,7 +192,7 @@ public class PerlCommandLine extends GeneralCommandLine {
   public @NotNull PerlCommandLine prependLineWith(@NotNull String... commands) {
     List<String> commandsList = mutableList(commands);
     commandsList.add(getExePath());
-    setExePath(commandsList.remove(0));
+    setExePath(commandsList.removeFirst());
     if (!commandsList.isEmpty()) {
       ParametersList parametersList = getParametersList();
       ContainerUtil.reverse(commandsList).forEach(it -> parametersList.addAt(0, it));
