@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -64,7 +64,7 @@ public class PerlAbsolutePathConsoleFilter implements Filter {
     }
 
     return resultList.isEmpty() ? null :
-           resultList.size() == 1 ? (Result)resultList.get(0) :
+      resultList.size() == 1 ? (Result)resultList.getFirst() :
            new Result(resultList);
   }
 }
