@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2021 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -79,7 +79,7 @@ public class PerlSyntheticBlock implements PerlAstBlock {
   }
 
   public @NotNull Block getFirstRealBlock() {
-    Block candidate = mySubBlocks.get(0);
+    Block candidate = mySubBlocks.getFirst();
     while (candidate instanceof PerlSyntheticBlock) {
       candidate = ((PerlSyntheticBlock)candidate).getFirstRealBlock();
     }
@@ -87,7 +87,7 @@ public class PerlSyntheticBlock implements PerlAstBlock {
   }
 
   public @NotNull Block getLastRealBlock() {
-    Block candidate = mySubBlocks.get(mySubBlocks.size() - 1);
+    Block candidate = mySubBlocks.getLast();
     while (candidate instanceof PerlSyntheticBlock) {
       candidate = ((PerlSyntheticBlock)candidate).getLastRealBlock();
     }
