@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2022 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -81,7 +81,7 @@ public class StringToLastHeredocIntention extends PsiElementBaseIntentionAction 
 
     final Document document = editor.getDocument();
     newLineIndex -= stringElement.getTextLength();
-    PsiElement heredocOpener = heredocElements.get(0);
+    PsiElement heredocOpener = heredocElements.getFirst();
     newLineIndex += heredocOpener.getTextLength();
     stringElement.replace(heredocOpener); // replace string with heredoc opener
     var psiDocumentManager = PsiDocumentManager.getInstance(element.getProject());
